// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_FAILURE",
}
`;

exports[`creates a FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
}
`;

exports[`creates a FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
}
`;

exports[`handles FETCH_GAME_DATA_FAILURE action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;

exports[`handles FETCH_GAME_DATA_REQUEST action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": true,
}
`;

exports[`handles FETCH_GAME_DATA_SUCCESS action 1`] = `
Object {
  "gameData": Array [
    Object {
      "a": 1,
      "b": 2,
    },
    Object {
      "c": 3,
      "d": 4,
    },
  ],
  "isFetching": false,
}
`;

exports[`handles fetchConsecutiveData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "178",
          "324",
          "901",
          "505",
        ],
        "serial": Array [
          "877",
          "878",
          "879",
          "880",
          "881",
        ],
      },
      Object {
        "others": Array [
          "0",
          "903",
          "958",
          "613",
        ],
        "serial": Array [
          "59",
          "60",
          "61",
          "62",
          "63",
        ],
      },
      Object {
        "others": Array [
          "38",
          "911",
          "341",
          "550",
        ],
        "serial": Array [
          "282",
          "283",
          "284",
          "285",
          "286",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMatchData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Array [
        Array [
          "i",
          "i",
        ],
        Array [
          "r",
          "r",
        ],
        Array [
          "H",
          "H",
        ],
        Array [
          "q",
          "q",
        ],
      ],
      Array [
        Array [
          "Y",
          "Y",
        ],
        Array [
          "Q",
          "Q",
        ],
        Array [
          "H",
          "H",
        ],
        Array [
          "T",
          "T",
        ],
      ],
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchMultipleChoiceData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answerIndex": 3,
        "choices": Array [
          "R",
          "Z",
          "S",
          "Q",
        ],
        "question": "Q",
      },
      Object {
        "answerIndex": 2,
        "choices": Array [
          "I",
          "P",
          "L",
          "N",
        ],
        "question": "L",
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchSerialData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "answer": 332,
        "serial": Array [
          "327",
          "328",
          "329",
          "330",
          "331",
          "332",
          "333",
          "334",
          "335",
          "336",
          "337",
          "338",
          "339",
        ],
      },
      Object {
        "answer": 120,
        "serial": Array [
          "118",
          "119",
          "120",
          "121",
          "122",
          "123",
          "124",
          "125",
          "126",
        ],
      },
      Object {
        "answer": 478,
        "serial": Array [
          "473",
          "474",
          "475",
          "476",
          "477",
          "478",
          "479",
          "480",
          "481",
          "482",
          "483",
          "484",
          "485",
          "486",
        ],
      },
      Object {
        "answer": 204,
        "serial": Array [
          "202",
          "203",
          "204",
          "205",
          "206",
          "207",
          "208",
          "209",
          "210",
          "211",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`handles fetchWordData action 1`] = `
Array [
  Object {
    "type": "Fiji/game/FETCH_GAME_DATA_REQUEST",
  },
  Object {
    "gameData": Array [
      Object {
        "others": Array [
          "O",
          "M",
          "C",
          "O",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "G",
          "F",
          "H",
          "W",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
      Object {
        "others": Array [
          "F",
          "J",
          "Y",
          "V",
        ],
        "word": Array [
          "A",
          "P",
          "P",
          "L",
          "E",
        ],
      },
    ],
    "type": "Fiji/game/FETCH_GAME_DATA_SUCCESS",
  },
]
`;

exports[`returns the same state on an unhandled action 1`] = `
Object {
  "gameData": Array [],
  "isFetching": false,
}
`;
